kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cloudmart
  labels:
    name: cloudmart
    app: cloudmart-ai
